--- a/sample.html
+++ b/sample.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,7 @@
     <li>sample</li>
     <li>sample</li>
     <li>sample</li>
+    <p class="kaka">kkkkkkkk</p>
 
 </body>
 </html>
